--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -246,28 +246,28 @@ layout: base.liquid
                            data-filtervalue='{"sub_type":4, "identity":[2]}'
                            class="explore_filter" id="checkbox1"/>
                     <label for="checkbox1">
-                        <img src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}" alt=""/><span>Settlements (Indigenous)</span>
+                        <img src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}" alt=""/><span>Settlements (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":4, "identity":[1]}'
                            class="explore_filter" id="checkbox2"/>
                     <label for="checkbox2">
-                        <img src="{{ '/assets/img/stories/circle_purple.webp' | url }}" alt=""/><span>Settlements (European)</span>
+                        <img src="{{ '/assets/img/stories/cross_purple.webp' | url }}" alt=""/><span>Settlements (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[2]}'
                            class="explore_filter" id="checkbox3"/>
                     <label for="checkbox3">
-                        <img src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}" alt=""/><span>Placenames (Indigenous)</span>
+                        <img src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}" alt=""/><span>Placenames (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[1]}'
                            class="explore_filter" id="checkbox4"/>
                     <label for="checkbox4">
-                        <img src="{{ '/assets/img/stories/cross_purple.webp' | url }}" alt=""/><span>Placenames (European)</span>
+                        <img src="{{ '/assets/img/stories/circle_purple.webp' | url }}" alt=""/><span>Placenames (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -303,62 +303,62 @@ layout: base.liquid
 
 <table>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
     <td>Settlement (Indigenous)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
     <td>Settlement (European)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
     <td>Placename (Indigenous)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
     <td>Placename (European)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
     <td>Annotation (Indigenous-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
     <td>Annotation (Haudenosaunee-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
     <td>Annotation (European-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
     <td>Colonial domain</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img></td>
     <td>River</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img></td>
     <td>Pathway</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
     <td>Boundary</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img></td>
     <td>Council fire</td>
   </tr>
