--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ div.container {
   max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 24px;
 }
 
 div.footer-bottom {
@@ -524,7 +525,7 @@ nav {
   width: 100%;
   position: relative;
   margin: 0;
-  padding: 0;
+  padding: 0 24px;
 }
 .mapOverlay section h1 a {
   margin-top: 10em;
@@ -1170,6 +1171,7 @@ nav {
 
 img {
   vertical-align: middle;
+  max-width: 100%;
 }
 
 a {
@@ -1686,6 +1688,9 @@ a {
   }
   .w3-dropdown-hover.w3-mobile, .w3-dropdown-hover.w3-mobile .w3-btn, .w3-dropdown-hover.w3-mobile .w3-button, .w3-dropdown-click.w3-mobile, .w3-dropdown-click.w3-mobile .w3-btn, .w3-dropdown-click.w3-mobile .w3-button {
     width: 100%;
+  }
+  section {
+    padding: 0;
   }
 }
 @media (max-width: 768px) {
