Update stories.liquid; started adding new filters

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -284,6 +284,13 @@ layout: base.liquid
                         <img src="{{ '/assets/img/stories/principal_rivers.webp' | url }}" alt=""/><span>Rivers</span>
                     </label>
                 </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           class="explore_filter" id="checkbox7"/>
+                    <label for="checkbox7">
+                        <img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Descriptions</span>
+                    </label>
+                </li>
             </ol>
         </section>
     </div>
