--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -285,10 +285,38 @@ layout: base.liquid
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
-                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           data-filtervalue='{"sub_type":11, "identity":[3]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Descriptions</span>
+                        <img src="{{ '/assets/img/stories/diagonal-hatch-green-427D67.webp' | url }}" alt=""/><span>Haudenosaunee related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":11, "identity":[2]}'
+                           class="explore_filter" id="checkbox8"/>
+                    <label for="checkbox8">
+                        <img src="{{ '/assets/img/stories/region_turquoise.webp' | url }}" alt=""/><span>Other indigenous related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":11, "identity":[1]}'
+                           class="explore_filter" id="checkbox9"/>
+                    <label for="checkbox9">
+                        <img src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}" alt=""/><span>European related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":14, "identity":[1]}'
+                           class="explore_filter" id="checkbox10"/>
+                    <label for="checkbox10">
+                        <img src="{{ '/assets/img/stories/region_purple.webp' | url }}" alt=""/><span>Colonial domain</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           class="explore_filter" id="checkbox11"/>
+                    <label for="checkbox11">
+                        <img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Description</span>
                     </label>
                 </li>
             </ol>
