--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -1,6 +1,6 @@
 <footer class="footer">
     <hr/>
-    <div class="w3-row has-text-centered w3-padding-small flex-container">
+    <div class="w3-row has-text-centered w3-padding-small flex-container w3-hide-small">
         <div class="logo">
             <h4>Partners and Funders</h4>
         </div>
@@ -29,8 +29,36 @@
         </div>
 
     </div>
+    <div class="w3-row has-text-centered flex-container w3-padding-small w3-hide-medium w3-hide-large">
+        <div class="logo">
+            <h4>Partners and Funders</h4>
+        </div>
+        <div class="logo kcl-logo">
+            <a href="//kdl.kcl.ac.uk/">
+                {% image "assets/img/logos/KCL.png", "King's College London logo", "300, 600" %}
+            </a>
+        </div>
 
+        <div class="logo">
+            <a href="//treatiedspaces.com/">
+                {% image "assets/img/logos/treatied_spaces.png", "Treatied spaces", "300, 600" %}
+            </a>
+        </div>
+        <!--w3-col s12 m3 l2 -->
+        <div class="logo">
+            <a href="//www.ukri.org/about-us/ahrc/">
+                {% image "assets/img/logos/ahrc_2.png", "Treatied spaces", "(min-width: 10em), 30vw" %}
+            </a>
+        </div>
 
+    </div>
+<div class="w3-row w3-padding-small w3-hide-medium w3-hide-large">
+    <div class="footer-credits">
+            ©2024 Brightening the Covenant Chain <a href="{{ "/accessibility" | url }}">Accessibility Statement</a>
+            <a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a>
+        </div>
+
+</div>
     <div class="w3-row footer-bottom">
         <div class="w3-row has-text-centered w3-padding-small">
             <div class="w3-col s1 m2 l3">&nbsp</div>
