homepage text fix

--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -49,8 +49,7 @@ layout: base.liquid
 
             <div class="w3-col s6 m4 l3 quicklink">
                 <div class="quicklink-text">
-                    Find out more about the themes and topics of M&CW with links to related websites and suggestions for
-                    further reading.
+                    Find out more about the themes and topics of M&CW with links to related websites and further reading.
                 </div>
                 <div class="info-button"><a href="{{ "resources/" | url }}">Resources</a></div>
             </div>
