fixed subtype 14 in explorefilter control array

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -128,7 +128,8 @@ div.quicklink .info-button {
 }
 
 header {
-  height: 6%;
+  height: 5%;
+
 }
 
 div.home-container {
@@ -241,12 +242,13 @@ a {
 a#sitetitle {
   color: white;
   text-decoration: none;
-  padding: 4px 0 0 24px;
+  padding-left: 1%;
+  padding-bottom: 3%;
   display: block;
   position: fixed;
   width: 100%;
   background: $darkgreen;
-  height: 6%;
+  height: 5%;
   z-index: 9;
   font-size: 22px;
   border-bottom: 4px solid darken($lightgreen, 20%);
@@ -411,7 +413,7 @@ nav {
     pointer-events: auto;
     background: lighten(lightgray, 12%);
     height: 3.5em;
-    top: 44px;
+    top: 5%;
     border-bottom: 0;
     position: fixed;
     width: 60%;
@@ -2438,7 +2440,7 @@ a {
     width: auto;
     background: url('../img/homepage-hero-1920.jpg') lightgray -0.36px 0px / 100.056% 121.087% no-repeat;
     background-size: cover;
-    min-height: 30vw;
+    min-height: 40vw;
     align-items: center;
     justify-content: center;
   }
@@ -2527,8 +2529,18 @@ a {
     font-size: 80%;
 
   }
-  div.container p{
+  div.container p {
     line-height: 150%;
   }
+  /*div#mainmenu label.menu {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 2px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 1;
+  }*/
+
 
 }
