--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ div.quicklink .info-button {
 }
 
 header {
-  height: 6%;
+  height: 5%;
 }
 
 div.home-container {
@@ -174,12 +174,13 @@ a:hover {
 a#sitetitle {
   color: white;
   text-decoration: none;
-  padding: 4px 0 0 24px;
+  padding-left: 1%;
+  padding-bottom: 3%;
   display: block;
   position: fixed;
   width: 100%;
   background: #132b19;
-  height: 6%;
+  height: 5%;
   z-index: 9;
   font-size: 22px;
   border-bottom: 4px solid #4b5d04;
@@ -333,7 +334,7 @@ nav {
   pointer-events: auto;
   background: #f2f2f2;
   height: 3.5em;
-  top: 44px;
+  top: 5%;
   border-bottom: 0;
   position: fixed;
   width: 60%;
@@ -2220,7 +2221,7 @@ a {
     width: auto;
     background: url("../img/homepage-hero-1920.jpg") lightgray -0.36px 0px/100.056% 121.087% no-repeat;
     background-size: cover;
-    min-height: 30vw;
+    min-height: 40vw;
     align-items: center;
     justify-content: center;
   }
@@ -2293,4 +2294,13 @@ a {
   div.container p {
     line-height: 150%;
   }
+  /*div#mainmenu label.menu {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 2px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 1;
+  }*/
 }
