Testing addition of pathways to filter block

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -319,6 +319,13 @@ layout: base.liquid
                         <img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Description</span>
                     </label>
                 </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":5, "identity":[0]}'
+                           class="explore_filter" id="checkbox12"/>
+                    <label for="checkbox12">
+                        <img src="{{ '/assets/img/stories/pathways.webp' | url }}" alt=""/><span>Description</span>
+                    </label>
+                </li>
             </ol>
         </section>
     </div>
