changed label value for filter on sub_type 5

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -235,7 +235,7 @@ layout: base.liquid
         </section>
 
         <section id="featureFilters" class="filterDisabled">
-            <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/6 Selected</em></h3>
+            <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/12 Selected</em></h3>
                 <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
                 <label for="selectallFeatures">Select All</label></span>
             </header>
@@ -323,7 +323,7 @@ layout: base.liquid
                            data-filtervalue='{"sub_type":5, "identity":[0]}'
                            class="explore_filter" id="checkbox12"/>
                     <label for="checkbox12">
-                        <img src="{{ '/assets/img/stories/pathways.webp' | url }}" alt=""/><span>Description</span>
+                        <img src="{{ '/assets/img/stories/pathways.webp' | url }}" alt=""/><span>Pathways</span>
                     </label>
                 </li>
             </ol>
