updates to markdown-it-attrs

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -8,6 +8,12 @@
   align-items: center;
 }
 
+.map_page_image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
 
 div.logo {
   padding-left: 1em;
