--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,13 @@
   align-items: center;
 }
 
+.map_page_image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
 div.logo {
   padding-left: 1em;
   width: 15%;
