--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -1,3 +1,56 @@
+
+//Colours
+$darkgreen: #132b19;
+$midgreen: #124d20;
+$lightgreen: #9abf08;
+$seafoam: #b2d2a4;
+
+//Fonts
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
+/*** MIXINS ***/
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  -ms-border-radius: $radius;
+  border-radius: $radius;
+}
+
+@mixin rotate($degrees) {
+  -webkit-transform: rotate($degrees);
+  -moz-transform: rotate($degrees);
+  -ms-transform: rotate($degrees);
+  -o-transform: rotate($degrees);
+  transform: rotate($degrees);
+}
+
+@mixin transform($transforms) {
+  -moz-transform: $transforms;
+  -o-transform: $transforms;
+  -ms-transform: $transforms;
+  -webkit-transform: $transforms;
+  transform: $transforms;
+}
+
+@mixin animation($animation...) {
+  -o-animation: $animation;
+  -moz-animation: $animation;
+  -webkit-animation: $animation;
+  animation: $animation;
+}
+
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
+
+// END MIXINS
+
+
+
 // Extra stuff in applying Lucie's templates
 
 .flex-container {
@@ -81,7 +134,7 @@ div.logo img {
   padding: 2%;
 margin-top: 20%;
   color: #000;
-  font-family: "Playfair Display";
+  font-family: "Jost", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -98,7 +151,7 @@ margin-top: 20%;
   padding-bottom: 1%;
   width: 20%;
   color: #000;
-  font-family: "Playfair Display";
+  font-family: "Jost", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -130,7 +183,7 @@ div.quicklink .info-button {
   text-align: center;
 
   color: #FFF;
-  font-family: "Playfair Display";
+  font-family: "Jost", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -188,7 +241,7 @@ div.footer-bottom {
 
 div.footer-bottom div.develop {
   color: #FFF;
-  font-family: "Playfair Display";
+  font-family: "Jost", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -197,55 +250,6 @@ div.footer-bottom div.develop {
 }
 
 
-//Colours
-$darkgreen: #132b19;
-$midgreen: #124d20;
-$lightgreen: #9abf08;
-$seafoam: #b2d2a4;
-
-//Fonts
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
-
-/*** MIXINS ***/
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -ms-border-radius: $radius;
-  border-radius: $radius;
-}
-
-@mixin rotate($degrees) {
-  -webkit-transform: rotate($degrees);
-  -moz-transform: rotate($degrees);
-  -ms-transform: rotate($degrees);
-  -o-transform: rotate($degrees);
-  transform: rotate($degrees);
-}
-
-@mixin transform($transforms) {
-  -moz-transform: $transforms;
-  -o-transform: $transforms;
-  -ms-transform: $transforms;
-  -webkit-transform: $transforms;
-  transform: $transforms;
-}
-
-@mixin animation($animation...) {
-  -o-animation: $animation;
-  -moz-animation: $animation;
-  -webkit-animation: $animation;
-  animation: $animation;
-}
-
-@mixin transition($args...) {
-  -webkit-transition: $args;
-  -moz-transition: $args;
-  -ms-transition: $args;
-  -o-transition: $args;
-  transition: $args;
-}
-
-// END MIXINS
 
 // GENERAL
 
@@ -262,7 +266,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0 auto;
-  font-family: 'Playfair Display', serif;
+  font-family: "Jost", sans-serif;
 }
 
 a {
@@ -2424,7 +2428,7 @@ a {
   .quicklink {
     text-align: center;
     color: #000;
-    font-family: "Playfair Display";
+    font-family: "Jost", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
