--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,9 @@ div.logo img {
 
 .subtitle {
   color: #FFF;
-  font-family: Petrona;
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
-  font-weight: 600;
-  line-height: normal;
+  font-weight: 200;
 }
 
 .homelandLabel {
@@ -203,19 +201,26 @@ a#sitetitle {
   text-decoration: none;
   padding-left: 1%;
   display: block;
-  position: fixed;
-  width: 100%;
-  background: #132b19;
-  line-height: 120%;
-  height: 5%;
   z-index: 9;
   font-size: 22px;
-  border-bottom: 4px solid #4b5d04;
+  line-height: 1.2;
+  -webkit-transition: all 250ms ease-in;
+  -moz-transition: all 250ms ease-in;
+  -ms-transition: all 250ms ease-in;
+  -o-transition: all 250ms ease-in;
+  transition: all 250ms ease-in;
+}
+a#sitetitle:hover {
+  opacity: 0.8;
 }
 
 nav {
-  height: 3em;
   top: 0;
+  position: fixed;
+  width: 100%;
+  border-bottom: 4px solid #4b5d04;
+  background: #132b19;
+  padding-bottom: 0.1em;
 }
 
 #mainmenu {
@@ -278,13 +283,17 @@ nav {
   transition: all 250ms ease-in;
   cursor: pointer;
   position: fixed;
-  padding: 0.5em 1em;
+  padding: 0.5em 0.5em;
   background: transparent;
   top: 0;
   right: 0;
-  font-size: 1.2em;
+  font-size: 20px;
+  font-weight: 300;
   color: white;
   z-index: 9999;
+}
+#mainmenu > label:hover {
+  opacity: 0.8;
 }
 #mainmenu input#menu[type=checkbox] {
   display: none;
@@ -309,16 +318,17 @@ nav {
   /* cross icon */
 }
 #mainmenu input#menu[type=checkbox]:checked ~ label.menu:before {
-  content: "X";
+  content: "✖";
   position: fixed;
-  right: -1em;
-  top: 0.3em;
+  right: -1.8em;
+  top: 0.6em;
   height: 1.7em;
   width: 1.7em;
   text-align: center;
+  /* font-weight: 100; */
   color: white;
   cursor: pointer;
-  font-size: 1.3em;
+  font-size: 20px;
 }
 
 /* end #menu*/
@@ -2184,12 +2194,6 @@ a {
 }
 
 @media (min-width: 601px) and (max-width: 1200px) {
-  header {
-    height: 5%;
-  }
-  a#sitetitle {
-    height: 5%;
-  }
   div.container {
     max-width: 1200px;
     padding-left: 5%;
@@ -2275,7 +2279,7 @@ a {
   }
   a#sitetitle {
     padding-left: 1%;
-    font-size: 15px;
+    font-size: 20px;
   }
   a#sitetitle span.subtitle {
     font-size: 10px;
