deploy: 9741a4ffb56e104db735f66564e2da9e65ae1f57

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,7 @@ nav {
   display: block;
   line-height: 1;
   color: white;
+  cursor: pointer;
 }
 #mainmenu > ol > li:last-of-type {
   padding-bottom: 50vh;
