--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -3,30 +3,20 @@ layout: base.liquid
 ---
 <section class="section">
     <div class="home-container">
-        <div class="w3-row has-text-centered w3-padding-small home-hero">
-            <div class="w3-col s1 m4 l4">&nbsp;</div>
-            <div class="w3-col s10 m4 l4 info-box">
-                Movement and Common Worlds is an interactive map platform which uses data garnered from historical maps
-                to illustrate evolving European conceptions of the political and spatial worlds of the American
-                Northeast. As part of Brightening the Covenant Chain, our kinetic map helps tell a more nuanced and
-                complex story than popular history has hitherto told about colonial settlement among - and the Crown's
-                relations with - the powerful indigenous nations of the Iroquois Confederacy.
+        <div class="home-hero">
+            <div class="info-box">
+                Using data garnered from historical maps, an interactive map platform illustrates evolving European conceptions of the political and spatial worlds of the American
+                Northeast. 
                 <br/>
-                <h2 class="w3-hide-medium w3-hide-large">The interactive map cannot be viewed on mobile-sized screens</h2>
-                <h4 class="w3-hide-medium w3-hide-large">Pleas view this site on a tablet or larger, or click below to learn more about the project</h4>
-                <div class="info-button w3-hide-small"><a href="{{ "stories/" | url }}">GO TO MAP</a></div>
-                <div class="info-button w3-hide-medium w3-hide-large"><a href="{{ "about/" | url }}">Learn More</a></div>
+                <a href="{{ "about/" | url }}"><div class="info-button">About</div></a>
+                <a href="{{ "stories/" | url }}"><div class="info-button">Stories</div></a>
+                
             </div>
 
             <div class="content {{ tags }}">
                 {{ content }}
             </div>
-        </div>
-        <div class="w3-row has-text-centered w3-padding-small">
-            <div class="w3-col s10 m10 w3-hide-medium w3-hide-large">
-                <h2>
-                </h2>
-            </div>
+    
         </div>
         <div class="w3-row has-text-centered w3-padding-small flex-container quicklink-container w3-hide-small">
 
