fix: home info-box layout

--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -18,9 +18,9 @@ layout: base.liquid
             </div>
     
         </div>
-        <div class="w3-row has-text-centered w3-padding-small flex-container quicklink-container w3-hide-small">
+        <div class="">
 
-            <div class="w3-col s10 m4 l3 quicklink quicklink-spacer">
+            <div class="">
                 <div class="quicklink-text">
                     Scroll through illustrated narratives which explain and expand on the historical contexts of the
                     map
@@ -30,14 +30,14 @@ layout: base.liquid
 
             </div>
 
-            <div class="w3-col s10 m4 l3 quicklink quicklink-spacer">
+            <div class="">
                 <div class="quicklink-text">
                     Select historical map sources and choose what features to display.
                 </div>
                 <div class="info-button"><a href="{{ "stories/#s6-end" | url }}">Explore</a></div>
             </div>
 
-            <div class="w3-col s6 m4 l3 quicklink">
+            <div class="">
                 <div class="quicklink-text">
                     Find out more about the themes and topics of M&CW with links to related websites and further reading.
                 </div>
