--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -340,7 +340,7 @@ nav {
     @include transition(all 250ms ease-in);
     cursor: pointer;
     position: fixed;
-    padding: 0.5em 0.5em 0.3em 0.5em
+    padding: 0.5em 0.5em 0.3em 0.5em;
     background: transparent;
     top: 0;
     right: 0;
