--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -5,11 +5,11 @@ layout: base.liquid
     <div class="home-container">
         <div class="home-hero">
             <div class="info-box">
-                Using data garnered from historical maps, an interactive map platform illustrates evolving European conceptions of the political and spatial worlds of the American
+                An interactive map platform, using data garnered from historical maps, illustrates evolving European conceptions of the political and spatial worlds of the American
                 Northeast. 
                 <br/>
-                <a href="{{ "about/" | url }}"><div class="info-button">About</div></a>
-                <a href="{{ "stories/" | url }}"><div class="info-button">Stories</div></a>
+                <a href="{{ "about/" | url }}"><button>About</button></a>
+                <a href="{{ "stories/" | url }}"><button>Stories</button></a>
                 
             </div>
 
@@ -18,30 +18,30 @@ layout: base.liquid
             </div>
     
         </div>
-        <div class="">
+        <div class="home-section">
 
-            <div class="">
-                <div class="quicklink-text">
+            <div class="card">
+                <p>
                     Scroll through illustrated narratives which explain and expand on the historical contexts of the
                     map
                     data.
-                </div>
-                <div class="info-button"><a href="{{ "stories/" | url }}">Stories</a></div>
+                </p>
+                <a href="{{ "stories/" | url }}"><button>Stories</button></a>
 
             </div>
 
-            <div class="">
-                <div class="quicklink-text">
+            <div class="card">
+                <p>
                     Select historical map sources and choose what features to display.
-                </div>
-                <div class="info-button"><a href="{{ "stories/#s6-end" | url }}">Explore</a></div>
+                </p>
+                <a href="{{ "stories/#s6-end" | url }}"><button>Explore</button></a>
             </div>
 
-            <div class="">
-                <div class="quicklink-text">
-                    Find out more about the themes and topics of M&CW with links to related websites and further reading.
-                </div>
-                <div class="info-button"><a href="{{ "resources/" | url }}">Resources</a></div>
+            <div class="card">
+                <p>
+                    Find out more about the themes and topics linking to related websites and further reading.
+                </p>
+                <a href="{{ "resources/" | url }}"><button>Resources</button></a>
             </div>
 
         </div>
