--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -402,7 +402,7 @@ nav {
     opacity: 0.93;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 2%;
+    padding: 4%;
     color: #000;
     font-family: "Jost", sans-serif;
     font-size: 18px;
@@ -419,19 +419,18 @@ nav {
       text-align: center;
       cursor: pointer;
       button{
-        border:2px solid $midgreen;
+        border:1px solid $midgreen;
         max-width:250px;
         width:100%;
         text-align: center;
         background-color: $darkgreen;
         color: white;
         margin:1.5em 3% 0 3%;
-        font-size: 16px;
+        font-size: 18px;
         cursor: pointer;
-        padding: 1em;
+        padding: 0.7em 1em;
         text-transform: uppercase;
-        font-size: 14px;
-        font-weight: 700;
+        font-weight: 200;
         @include transition(all 300ms ease-in);
       }
       &:hover{
@@ -453,7 +452,7 @@ nav {
   max-width:1400px;
   .card{
     width: 30%;
-    border-top: 5px solid $darkgreen;
+    border-top: 5px solid $midgreen;
     background-color: #f1f1f1;
     padding:2em;
     font-size:18px;
@@ -469,16 +468,16 @@ nav {
     a {
       margin-top: auto;
       button{
-        border:2px solid $midgreen;
+        border:1px solid $midgreen;
         @include transition(all 300ms ease-in);
         background-color: white;
         color: $darkgreen;
-        font-size: 14px;
+        font-size: 18px;
         cursor: pointer;
         width:100%;
         text-transform: uppercase;
-        padding:1em;
-        font-weight: 700;
+        padding:0.7em 1em;
+        font-weight: 200;
       }
       &:hover{
         opacity:1;
